--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
               placeholder="Имя"
               minlength="2"
               maxlength="40"
-              pattern="^[\s\wА-Яа-яёЁ\-]+$"
+              pattern="^[\sА-Яа-яёЁ\-A-Za-z]+$"
               data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
               required
             />
@@ -66,7 +66,7 @@
               placeholder="Занятие"
               minlength="2"
               maxlength="200"
-              pattern="^[\s\wА-Яа-яёЁ\-]+$"
+              pattern="^[\sА-Яа-яёЁ\-A-Za-z]+$"
               data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
               required
             />
@@ -93,7 +93,7 @@
               placeholder="Название"
               minlength="2"
               maxlength="30"
-              pattern="^[\s\wА-Яа-яёЁ\-]+$"
+              pattern="^[\sА-Яа-яёЁ\-A-Za-z]+$"
               data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
               required
             />
